# embedded-dsp-streamer

./: LICENSE  README.md
.github/workflows/: stm32.yml
docs/: index.html
fpga/: README.md
fpga/max10_fmc_fifo/: .gitignore  INC_CTRL.qsys  fmc_bridge_32.bsf  max10_fmc_fifo.bdf  max10_fmc_fifo.qpf  max10_fmc_fifo.qsf  nco_small.bsf  phase_inc_const.bsf  phase_inc_const.v  phase_inc_const_bb.v  pll.bsf  pll.ppf  pll.v  pll_bb.v
fpga/max10_fmc_fifo/INC_CTRL/: INC_CTRL.bsf  INC_CTRL.cmp  INC_CTRL.html  INC_CTRL.ppf  INC_CTRL_bb.v  INC_CTRL_inst.v  INC_CTRL_inst.vhd
fpga/max10_fmc_fifo/fmc/: fmc_bridge_32.v
fpga/max10_fmc_fifo/greybox_tmp/: cbx_args.txt
fpga/max10_fmc_fifo/nco/: nco_rom.v  nco_small.bsf  nco_small.v  sine1024.hex
fpga/max10_fmc_fifo/signaltap_files/: nco_test.stp
scripts/: gen_sine.py
stm32/h745_fmc_udp/: .clangd  .gitignore  CMakeLists.txt  Dockerfile  h745_fmc_udp.ioc
stm32/h745_fmc_udp/CM4/: CMakeLists.txt  stm32h745xx_flash_CM4.ld  stm32h745xx_sram2_CM4.ld
stm32/h745_fmc_udp/CM7/: CMakeLists.txt  stm32h745xx_flash_CM7.ld  stm32h745xx_sram1_CM7.ld
stm32/h745_fmc_udp/CM7/App/my_math/: my_math.c  my_math.h
stm32/h745_fmc_udp/CM7/Core/Inc/: main.h  mdma.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
stm32/h745_fmc_udp/CM7/Core/Src/: eth.c  fmc.c  freertos.c  gpio.c  main.c  mdma.c  stm32h7xx_it.c  usart.c
stm32/h745_fmc_udp/cmake/: arm-gcc-toolchain.cmake  constants.cmake  format.cmake  tidy.cmake
stm32/h745_fmc_udp/tests/: CMakeLists.txt  test_my_math.c
stm32/h745_fmc_udp/tests/mocks/: mock_hal_gpio.c  mock_hal_gpio.h
